--- a/first.html
+++ b/first.html
@@ -96,7 +96,7 @@
         <label for="password">Password:</label>
         <input type="password" id="password" placeholder="Enter your password">
         
-        <button onclick="login()">Login</button>
+        <a href="index.html"><button>login</button></a>
     </div>
 </body>
 </html>
