--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         <label for="password">Password:</label>
         <input type="password" id="password" placeholder="Enter your password">
         
-        <a href="index.html"><button>login</button></a>
+        <a href="first.html"><button>login</button></a>
     </div>
 </body>
 </html>
