--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             if (username && email && password) {
                 alert(`Username: ${username}\nEmail: ${email}\nPassword: ${password}`);
                 // Redirect to the next page
-                window.location.href = "index.html";
+                window.location.href = "first.html";
             } else {
                 alert('Please fill in all fields.');
             }
@@ -100,4 +100,3 @@
     </div>
 </body>
 </html>
-
