--- a/first.html
+++ b/first.html
@@ -245,7 +245,7 @@
                 <li><a href="first.html"><button>Home</button></a></li>
                 <li><a href="Health tips.html"><button onclick="login()">Healthcare Tip</button></a></li>
                 <li><a href="First Aid.html"><button>First Aid</button></a></li>
-                <li><a href="TeleMidication.html"><button>TeleMedication</button></a></li>
+                <li><a href="TeleMidacation.html"><button>TeleMedacation</button></a></li>
                 <li> <a href="index.html"><button>Logout</button></a></li>
             </ul>
         </nav>
