--- a/Health tips.html
+++ b/Health tips.html
@@ -155,7 +155,7 @@
         <a href="first.html" class="home-button">Home</a>
         <a href="Health tips.html" class="home-button">Healthcare Tip</a>
         <a href="First Aid.html" class="home-button">First Aid</a>
-        <a href="TeleMidication.html" class="home-button">TeleMedacation</a>
+        <a href="TeleMidacation.html" class="home-button">TeleMedacation</a>
         <a href="index.html"class="home-button">Logout</a>
     </div>
     <header>
