--- a/first.html
+++ b/first.html
@@ -264,23 +264,11 @@
         </div>
         <h1>Take Actions Before Taking Medicines</h1>
         <p> Prevention is Better tha Cure.</p>
-        <p>We should have the basic idea of our health status and be aware of our own body.In the Places where there is
-            underserved Healthcare we are providing the first aid and a basic health status of your Body.</p>
-        <p>We also provide the nutritious diet and the healthy lifestyle to our customers.And follow the steps for your
-            benifits</p>
-        <p>The importance of preventive health care cannot be over-emphasized in the wake of shocking statistics of how
-            health is deteriorating rapidly due to a lack of preventive measures. This grueling reality must have been
-            on Elgin Moray’s mind when he said, “If prompt and effective action is not forthcoming, the medical services
-            of the central and local authorities will go where the school of dental services has already gone down the
-            drain” (British Medical Journal, 1949, p. 1416). Elgin made this observation many years ago but it is very
-            relevant in today’s preventive medicine. It emphasizes the neglect that practitioners and stakeholders gave
-            and still give to preventive healthcare.</p>
-        <p>Well, as the old adage goes, prevention is better than cure. Preventive healthcare results in reduced
-            mortality rates and this consequently increase life expectancy. Preventive medicine is significantly cheaper
-            as compared to traditional medicine that many people prefer. Lack of preventive medicine puts individuals in
-            danger of insalubrious lifestyles and varying food habits (Jekel, Katz and Elmore, 2001, p. 114). Being
-            strong and big is not a sign of a healthy lifestyle. Someone may be strong and active but inside he or she
-            harbors a health disaster waiting to strike. </p>
+        <p>Preventive healthcare is crucial for maintaining good health, especially in underserved areas where access to medical services is limited. By 
+            offering basic health assessments, first aid, and guidance on nutrition and healthy living, we can help individuals stay aware of their health 
+            status. Preventive measures not only reduce mortality rates but also increase life expectancy and are far more cost-effective than traditional 
+            medicine. As the saying goes, "prevention is better than cure," and taking proactive steps to maintain health can avoid future health crises, as 
+            neglecting preventive care often leads to deteriorating health.</p>
 
         <h1>Check Your Health Status</h1>
         <p>Calculate your BMI and learn about your health.</p>
