--- a/first.html
+++ b/first.html
@@ -350,50 +350,45 @@
 
             <p> 1. Types of Diseases:</p>
 
-            <p>Infectious Diseases: Caused by pathogens like bacteria, viruses, fungi, or parasites (e.g., flu,
-                malaria).
+            <p>i) Infectious Diseases: Caused by pathogens like bacteria, viruses, fungi, or parasites (e.g., flu,
+                malaria).</p>
 
-                Non-Infectious Diseases: Result from genetic, environmental, or lifestyle factors (e.g., diabetes, heart
-                disease).
+                <p>ii) Non-Infectious Diseases: Result from genetic, environmental, or lifestyle factors (e.g., diabetes, heart
+                disease).</p>
 
-                Chronic Diseases: Long-lasting conditions that often require ongoing management (e.g., asthma,
-                arthritis).
+               <p>iii) Chronic Diseases: Long-lasting conditions that often require ongoing management (e.g., asthma,
+                arthritis).</p>
 
                 Acute Diseases: Sudden onset and short duration (e.g., appendicitis).</p>
 
             <p> 2. Causes and Risk Factors:</p>
 
-            <p>Genetics: Some diseases are inherited (e.g., cystic fibrosis).
+            <p>i) Genetics: Some diseases are inherited (e.g., cystic fibrosis).</p>
 
-                Lifestyle Choices: Poor diet, lack of exercise, and smoking can lead to conditions like obesity or lung
-                cancer.
+               <p>ii) Lifestyle Choices: Poor diet, lack of exercise, and smoking can lead to conditions like obesity or lung
+                cancer.</p>
 
-                Environmental Factors: Pollution and exposure to toxins can trigger diseases.
+                <p> iii) Environmental Factors: Pollution and exposure to toxins can trigger diseases.</p>
 
-                Infections: Spread through contact, air, water, or vectors like mosquitoes.</p>
+               <p>iv) Infections: Spread through contact, air, water, or vectors like mosquitoes.</p>
 
             <p>3. Prevention and Management:</p>
 
-            <p>Vaccination: Protects against diseases like measles and polio.
+            <p>i) Vaccination: Protects against diseases like measles and polio.</p>
 
-                Healthy Lifestyle: Balanced diet, regular exercise, and avoiding harmful habits.
-
-                Early Detection: Regular check-ups and screenings can catch diseases early.
-
+             <p>ii) Healthy Lifestyle: Balanced diet, regular exercise, and avoiding harmful habits.</p>  
+             <p>iii) Early Detection: Regular check-ups and screenings can catch diseases early.</p>  
                 Treatment: Ranges from medication to surgery, depending on the condition.</p>
             <img src="https://th.bing.com/th/id/R.f72d3ec0ead8037d2cd96213dfc26fa6?rik=cKiIOW%2fs5aUpQg&riu=http%3a%2f%2fwww.metapharmacyservices.com%2fwp-content%2fuploads%2f2015%2f12%2finfections-disease-therapy.jpg&ehk=YWda6U1jm2A0y6kKZccEsNt8EUEJuvlAi%2fH0W8CPvtI%3d&risl=&pid=ImgRaw&r=0"
-                style="width: 800px; height: 500px;">
-            <p>Our comprehensive A to Z listing ensures easy navigation, allowing you to quickly find information
-                relevant to your specific symptoms. Each article provides valuable insights into the symptoms, their
-                possible causes, and related medical conditions. We understand the importance of staying up-to-date, so
-                our articles also include links to the latest news, research, and drugs, enabling you to access
-                additional resources for a comprehensive understanding of your symptoms.</p>
-            <p>Take charge of your health by arming yourself with knowledge. Use our A to Z listing to explore
-                symptom-related articles, and empower yourself to have meaningful discussions with your healthcare
-                provider. Remember, early detection and prompt medical attention are crucial for effective management
-                and treatment of various conditions</p>
+                style="width: 700px; height: 400px;">
+            <p>Our A to Z listing helps you easily find information on your specific symptoms. 
+                Each article offers valuable insights into symptoms, potential causes, and related conditions.
+                Stay informed with links to the latest news, research, and drugs for a comprehensive understanding.</p>
+            <p>Empower yourself with knowledge using our A to Z listing to explore symptom-related articles.
+                This will enable you to have more meaningful discussions with your healthcare provider. 
+                Remember, early detection and prompt medical attention are key for effective management and treatment.</p>
             <img src="https://thumbs.dreamstime.com/b/modern-human-diseases-infographic-design-template-icons-healthcare-infographic-visualization-bubble-design-modern-human-215290317.jpg"
-                style="width: 800px; height: 500px;">
+                style="width: 700px; height: 400px;">
             <p> </p>
 
 
