--- a/first.html
+++ b/first.html
@@ -352,34 +352,26 @@
 
             <p>i) Infectious Diseases: Caused by pathogens like bacteria, viruses, fungi, or parasites (e.g., flu,
                 malaria).</p>
-
                 <p>ii) Non-Infectious Diseases: Result from genetic, environmental, or lifestyle factors (e.g., diabetes, heart
                 disease).</p>
-
                <p>iii) Chronic Diseases: Long-lasting conditions that often require ongoing management (e.g., asthma,
                 arthritis).</p>
-
-                Acute Diseases: Sudden onset and short duration (e.g., appendicitis).</p>
+                <p>iv) Acute Diseases: Sudden onset and short duration (e.g., appendicitis).</p>
 
             <p> 2. Causes and Risk Factors:</p>
 
             <p>i) Genetics: Some diseases are inherited (e.g., cystic fibrosis).</p>
-
                <p>ii) Lifestyle Choices: Poor diet, lack of exercise, and smoking can lead to conditions like obesity or lung
                 cancer.</p>
-
                 <p> iii) Environmental Factors: Pollution and exposure to toxins can trigger diseases.</p>
-
-               <p>iv) Infections: Spread through contact, air, water, or vectors like mosquitoes.</p>
+                <p>iv) Infections: Spread through contact, air, water, or vectors like mosquitoes.</p>
 
             <p>3. Prevention and Management:</p>
-
-            <p>i) Vaccination: Protects against diseases like measles and polio.</p>
-
+             <p>i) Vaccination: Protects against diseases like measles and polio.</p>
              <p>ii) Healthy Lifestyle: Balanced diet, regular exercise, and avoiding harmful habits.</p>  
              <p>iii) Early Detection: Regular check-ups and screenings can catch diseases early.</p>  
-                Treatment: Ranges from medication to surgery, depending on the condition.</p>
-            <img src="https://th.bing.com/th/id/R.f72d3ec0ead8037d2cd96213dfc26fa6?rik=cKiIOW%2fs5aUpQg&riu=http%3a%2f%2fwww.metapharmacyservices.com%2fwp-content%2fuploads%2f2015%2f12%2finfections-disease-therapy.jpg&ehk=YWda6U1jm2A0y6kKZccEsNt8EUEJuvlAi%2fH0W8CPvtI%3d&risl=&pid=ImgRaw&r=0"
+             <p>iv) Treatment: Ranges from medication to surgery, depending on the condition.</p>
+             <img src="https://thumbs.dreamstime.com/b/modern-human-diseases-infographic-design-template-icons-healthcare-infographic-visualization-bubble-design-modern-human-215290317.jpg"
                 style="width: 800px; height: 400px;">
             <p>Our A to Z listing helps you easily find information on your specific symptoms. 
                 Each article offers valuable insights into symptoms, potential causes, and related conditions.
@@ -387,8 +379,6 @@
             <p>Empower yourself with knowledge using our A to Z listing to explore symptom-related articles.
                 This will enable you to have more meaningful discussions with your healthcare provider. 
                 Remember, early detection and prompt medical attention are key for effective management and treatment.</p>
-            <img src="https://thumbs.dreamstime.com/b/modern-human-diseases-infographic-design-template-icons-healthcare-infographic-visualization-bubble-design-modern-human-215290317.jpg"
-                style="width: 800px; height: 400px;">
             <p> </p>
 
 
