--- a/Health tips.html
+++ b/Health tips.html
@@ -163,7 +163,7 @@
             alt="Health Tips Image">
     </header>
 
-    <strong>These are few Health Tips</strong>
+    <h2><strong>These are few Health Tips</strong></h2>
 
     <p>Health is wealth, as they say! Here are some evidence-based health tips to help you maintain a balanced and
         healthy lifestyle:</p>
